<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.login.LoginActivity"
        android:background="@color/colorPrimary">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">


        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_launcher_round"
                        android:id="@+id/imageButton"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        android:id="@+id/textView"
                        android:textSize="18sp"
                        android:text="Username"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textColor="@android:color/black"
                        app:layout_constraintTop_toBottomOf="@+id/imageButton"
                        android:layout_marginTop="8dp"/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/usernameLogin"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        android:hint="Enter your username"
                        android:gravity="center" android:layout_marginTop="8dp"
                        android:backgroundTint="@android:color/black"/>
                <CheckBox
                        android:text="Keep me logged in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkboxLogin"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/usernameLogin"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:buttonTint="@android:color/black"
                        android:layout_marginEnd="8dp"/>
                <Button
                        android:text="Log in"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonLogin"
                        android:background="@android:color/black"
                        android:textColor="@android:color/white"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/checkboxLogin"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"/>


            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
